package create.factoryMethodPattern.method3.Reader;

import java.io.InputStream;

public class GIFReader extends ImageReader {

    public GIFReader(InputStream is) {
        super(is);
        //...
    }

}
