package create.factoryMethodPattern.method3.Reader;

import java.io.InputStream;

public abstract class ImageReader {

    public ImageReader(InputStream is) {
        //...
    }

}
