package create.factoryMethodPattern.method3.Reader;

import java.io.InputStream;

public class JPEGReader extends ImageReader {

    public JPEGReader(InputStream is) {
        super(is);
        //...
    }

}
