package create.factoryMethodPattern.method3.Reader;

import java.io.InputStream;

public class PNGReader extends ImageReader {

    public PNGReader(InputStream is) {
        super(is);
        //...
    }

}
